--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ environment:
 install:
 - cmd: echo "install script"
 build_script:
-- cmd: .\appveyor\ci_build.bat
+- cmd: ci_build.bat
 - cmd: 7z a dist.zip dist\*
 artifacts:
 - path: dist.zip
